--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: work_hour_calculator
 description: "Flutter package that calculates how many working hours are spent between two DateTimes"
-version: 0.0.3
+version: 0.0.4
 homepage: https://github.com/hanmajid/work_hour_calculator
 issue_tracker: https://github.com/hanmajid/work_hour_calculator/issues
 repository: https://github.com/hanmajid/work_hour_calculator
@@ -14,7 +14,8 @@ dependencies:
     sdk: flutter
 
 dev_dependencies:
-  flutter_lints: ^3.0.0
+  dart_pre_commit: ^5.3.0
+  flutter_lints: ^4.0.0
   flutter_test:
     sdk: flutter
 
